--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
-.App {
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+.super-div{
+  display: block;
+  width: 100%;
+  height: 100vh;
+  border: 2px;
+  background-color: pink;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.dashboard-div{
+  background-color: rgb(60, 60, 134);
+  display: inline-block;
+  width: 12%;
+  height: 100%;
+  padding-top: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.white-div{
+  /* align-items:flex-end; */
+  background-color: white;
+  display: inline-block;
+  width: 81%;
+  height: 90%;
+  vertical-align: top;
+  margin-top: 3%;
+  margin-left: 4%;
+  margin-right: 3%;
+  margin-bottom: 3%;
 }
