--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,6 @@
   /* padding-top: 0; */
   /* text-align: center; */
   color: white;
-  
 }
 
 .white-div{
@@ -88,22 +87,45 @@ input{
   border: 4px solid #D3DFFE;
 }
 
+.sliderhead{
+  display: inline;
+}
 h3{
   display: inline;
 }
 
-
-svg{
-  padding-left: 14px;
-  padding-top: 10px;
+.slider{
+  margin-top: 25px;
 }
 
 .Input{
   float:right;
-  margin-right: 50px;
+  margin-right: 10px;
   background-color: #ECF1FC;
   border: none;
   text-align: center;
   width:20%;
   height: 4vh;
+}
+
+
+.graphHeader{
+  margin-left: 20px;
+  padding-top: 25px;
+  color: #888989
+}
+.graphFooter{
+  margin-left: 5px;
+}
+.timeperiod{
+  color:black
+}
+.totalamount{
+  color:#4B6AE2;
+}
+.potentialcapitalgain{
+  color: #FFAD85;
+}
+.monthlyinvestment{
+  color: #0BA77A;
 }
